trunk/Archive2/ed/f13b0fd5619a5b/output
main.cpp: In function 'principal':
main.cpp:4:5: error: type of 'vazio' defaults to 'int'
 int principal ( vazio ) 
     ^
main.cpp:6:5: error: ISO C forbids nested functions [-Wpedantic]
     const  de char str [ ]  =  "Quantos personagens que essa seqüência de conter?" ;
     ^
main.cpp:6:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'char'
     const  de char str [ ]  =  "Quantos personagens que essa seqüência de conter?" ;
               ^
main.cpp:8:14: error: unknown escape sequence: '\040'
     printf ( "sem caráter nulo:% zu \ n " , strlen ( str ) ) ; 
              ^
main.cpp:8:5: warning: ' ' flag used with '%u' gnu_printf format [-Wformat=]
     printf ( "sem caráter nulo:% zu \ n " , strlen ( str ) ) ; 
     ^
main.cpp:9:14: error: unknown escape sequence: '\040'
     printf ( "com carácter nulo:% zu \ n " , sizeof str ) ; 
              ^
main.cpp:9:5: warning: ' ' flag used with '%u' gnu_printf format [-Wformat=]
     printf ( "com carácter nulo:% zu \ n " , sizeof str ) ; 
     ^
main.cpp:4:5: warning: unused parameter 'vazio' [-Wunused-parameter]
 int principal ( vazio ) 
     ^
main.cpp:10:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
